FIX(home-page): elements spacing in Promo block
Jira: [[FE]fix elements spacing in Promo block](https://cozyhometeam.atlassian.net/browse/CH-106)

--- a/src/components/Promo/Promo.scss
+++ b/src/components/Promo/Promo.scss
@@ -39,13 +39,11 @@
         position: relative;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
         max-width: 640px;
         width: 100%;
-        gap: 12px;
-        min-height: 370px;
+        gap: 20px;
         height: 100%;
-        padding: 109px 84px 109px 84px;
+        padding: 109px 50px 133px 84px;
         color: $light-color;
         overflow: hidden;
         &:hover {
@@ -57,8 +55,8 @@
             }
         }
         &__title {
-            font-family: Montserrat Alternates;
-            max-width: 366px;
+            font-family: 'Montserrat Alternates';
+            max-width: 364px;
             font-size: 36px;
             font-weight: 600;
         }
@@ -125,8 +123,10 @@
         }
         .add-link {
             width: 100%;
+            gap: 12px;
             min-height: 270px;
             &__title {
+                max-width: 320px;
                 font-size: 28px;
             }
         }
@@ -137,10 +137,10 @@
     .promo {
         margin-top: 64px;
         .add-link {
-            padding: 46px 64px 66px 30px;
+            padding: 48px 30px 67px 30px;
             min-height: 200px;
             &__title {
-                max-width: 100%;
+                max-width: 266px;
                 font-size: 24px;
             }
             &__decorative-text {
